--- a/Dasteen-site/style.css
+++ b/Dasteen-site/style.css
@@ -7,9 +7,9 @@ header {
     position: fixed;
     top: 0;
     z-index: 1;
-   display: flex;
+ /*   display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;*/
 }
 .w-1250{
     width: 1250px;
@@ -18,7 +18,7 @@ header {
     justify-content: space-between;
     align-items: center;
 }
- .logo{
+.w-1250 .logo{
     height: 45px;
     width: 194px;
     display: flex;
@@ -26,391 +26,24 @@ header {
     align-items: flex-end;
 
 }
- .logo .logo-h2{
+.w-1250 .logo .logo-h2{
     width: 146px;
     height: 45px;
     color: #001858;
     font-size: 36px;
+    font-style: normal;
     font-weight: 600;
+    line-height: normal;
 }
-    .logo .logo-p{
+.w-1250 .logo .logo-p{
     width: 48px;
     height: 27px;
     color: #6246EA;
     font-size: 18px;
+    font-style: normal;
     font-weight: 700;
+    line-height: normal;
 }
-nav{
-    display: flex;
-    gap:50px;
-    align-items: center;
-}
-nav>ul{
-    display: flex;
-    gap:50px;
-}
-nav ul a{
-    color:  #2B2C34;
-    font-size: 20px;
-    font-weight: 700;
-    text-transform: capitalize;
-}
-nav>ul .nav-link-search{
-    display: flex;
-    align-items: center;
-
-}
-nav svg{
+nav>ul .nav-link-search svg{
     margin-right: 10px;
-}
-nav .buyME-button{
-    border-radius: 4px;
-    background: #6246EA;
-    display: flex;
-    padding: 10px 17px;
-    align-items: center;
-    color: #FFFFFE;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: capitalize;
-}
-/*---------------------------------------header----------------------------------------*/
-main{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    background: #EFF0F3;
-}
-.top-hi-section{
-    width: 1250px;
-    height: 814px;
-    margin: 86px  auto 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-.top-hi-div{
-    width: 664px;
-    height: 345px;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-.top-hi-div .top-hi-h1{
-    width: 617px;
-    color: #2B2C34;
-    font-size: 64px;
-    font-weight: 700;
-    text-transform: capitalize;
-}
-.top-hi-div .top-hi-p{
-    border-left: 2.6px  solid #2B2C34;
-    padding-left:12px;
-    color: #9A9494;
-    font-size: 20px;
-    font-weight: 400;
-}
-form{
-    display: flex;
-    gap: 20px;
-}
-form input[type=email]{
-    display: flex;
-    padding: 21px 200px 21px 25px;
-    align-items: center;
-    border-radius: 8px;
-    border: none;
-    background: #FFFFFE;
-    color: #C0C0C0;
-    font-size: 20px;
-    font-weight: 400;
-    opacity: 0.5;
-}
-form input[type=submit]{
-    border-radius: 8px;
-    background: #6246EA;
-    border: none;
-    display: flex;
-    height: 67px;
-    padding: 20px 23px 19px 23px;
-    justify-content: center;
-    align-items: center;
-    color: #FFFFFE;
-    font-size: 20px;
-    font-weight: 700;
-    text-transform: capitalize;
-}
-/*------------------------------------------main top section----------------------------------------*/
-main svg{
-    margin-left: 12px;
-}
-#browse-category{
-    margin:0 auto;
-    padding-top: 67px;
-    width: 1250px;
-    height: 500px;
-    display: flex;
-    gap: 50px;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-.section-top-text{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #2B2C34;
-    font-weight: 700;
-    text-transform: capitalize;
-}
-.section-top-text>h3{
-    font-size: 24px;
-}
-.section-top-text>a{
-    font-size: 20px;
-}
-#browse-category .browse-category-items{
-    display: flex;
-    gap:37px;
-}
-.browse-category-items .browse-category-item{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    padding-left: 30px;
-    gap: 30px;
-    width: 220px;
-    height: 280px;
-    color: #2B2C34;
-    font-size: 24px;
-    font-weight: 700;
-    text-transform: capitalize;
-    border-radius: 8px;
-    background: #FFFFFE;
-    box-shadow: 4px 6px 13px 0px rgba(215, 215, 215, 0.25);
-    transition: 1.5s;
-}
- .browse-category-item>img{
-      background-size: 60px 60px;
-      background-color: #FFFFFE;
-      border-radius: 8px;
-}
-.browse-category-item:nth-child(1) img{
-    padding: 12px 14px 11px 13px;
-}
-.browse-category-item:nth-child(3) img{
-    padding: 18px 10px 18px 10px;
-}
-.browse-category-item:nth-child(4) img{
-    padding: 15px 12px 14px 12px;
-}
-.browse-category-item:nth-child(5) img{
-    padding: 12px 10px 12px 10px;
-}
-.browse-category-items .browse-category-item:hover{
-    background:  #6246EA;
-    color: #FFFFFE;
-    transition: 1.5s;
-}
-/*--------------------------------------------------------main, browse category section-----------------------------*/
-.section-bundle{
-    margin: 0 auto;
-    padding: 80px 0 80px 0;
-    height: 2504px;
-    width: 100%;
-    background-color: #FFFFFE;
-    display: grid;
-    grid-gap: 80px;
-    justify-items: center;
-    grid-template-columns:1fr ;
-    grid-template-rows: repeat(4, 1fr);
-}
- #section-bundle-feutured-articles, #section-bundle-css, #section-bundle-javascript, #section-bundle-react-js{
-    display: flex;
-    flex-direction: column;
-    height:490px;
-    gap: 30px;
-    width: 1250px;
-}
- .section-bundle-items{
-     display: flex;
-     gap:16px;
- }
- .section-bundle-items .bundle-item{
-     display: flex;
-     width: 300px;
-     height: 425px;
-     padding: 20px;
-     flex-direction: column;
-     border-radius: 12px;
-     background: #FFFFFE;
-     transition: 1.5s;
- }
- .bundle-item:hover{
-     box-shadow: 4px 6px 13px 0px rgba(215, 215, 215, 0.25);
-     transition: 1.5s;
- }
- .bundle-item-img-title{
-     display: flex;
-     flex-direction: column;
-     gap:25px;
-     margin-bottom: auto;
- }
- .bundle-item-img-title .bundle-title{
-     color: #2B2C34;
-     font-size: 20px;
-     font-weight: 700;
-     text-transform: capitalize;
- }
-.bundle-item-img-title .bundle-img{
-    width: 260px;
-    height: 198px;
-}
- .bundle-item .item-author-reliased{
-     display: flex;
-     gap: 15px;
-     align-items: center;
- }
- .item-author-reliased .bundle-author{
-     color: #2B2C34;
-     font-size: 16px;
-     font-weight: 600;
- }
- .item-author-reliased .bundle-author-date{
-     color: #2B2C34;
-     font-size: 14px;
-     font-weight: 400;
-     text-transform: capitalize;
- }
- .bundle-author-date span{
-     margin: 0 10px 0 10px;
-     width: 10px;
- }
- .bundle-button{
-     width: 165px;
-     height: 64px;
-     display: flex;
-     padding: 20px 23px 19px 23px;
-     justify-content: center;
-     align-items: center;
-     gap: 10px;
-     border-radius: 8px;
-     background: #6246EA;
-     color: #FFFFFE;
-     font-size: 20px;
-     font-weight: 700;
-     text-transform: capitalize;
- }
- /*--------------------------------------main  section bundle-------------------------------*/
-.subscribe-section{
-    margin:0 auto;
-    width: 1440px;
-    height: 453px;
-    padding: 58px 372px;
-}
-.subscribe-section>div{
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    gap: 30px;
-}
-.subscribe-section>div .subscribe-img{
-    border:130px;
-    border-radius: 65px;
-    background: #FFFFFE;
-    padding:23.2px 25px 0 25px;
-}
-.subscribe-title-subtitle{
-    display: flex;
-    gap:10px;
-    flex-direction: column;
-    text-align: center;
-}
-.subscribe-title-subtitle>h3{
-    color: #2B2C34;
-    font-size: 36px;
-    font-weight: 700;
-    text-transform: capitalize;
-}
-.subscribe-title-subtitle>p{
-    color: #C0C0C0;
-    font-size: 20px;
-    font-weight: 400;
-}
-/*---------------------------------------------------------main subscribe section-----------------------------------*/
-footer{
-    height: 435px;
-    background:  #E4E5E9;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.footer-container{
-    margin: 70px auto 50px auto;
-    width: 1250px;
-    height: 245px;
-    display: flex;
-    gap:160px;
-}
-.footer-container .footer-left-div{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items:flex-start;
-}
-.footer-left-div p{
-    color:  #2B2C34;
-    font-size: 18px;
-    font-weight: 400;
-}
- .footer-left-div .footer-left-links{
-     display: flex;
-     align-items: center;
-     gap:30px
- }
- .footer-box-links{
-     width: 805px;
-     height: 100%;
-     display: grid;
-     grid-template-columns:repeat(4, 1fr);
-     grid-gap: 95px;
- }
- .footer-links .footer-links-list{
-     display: flex;
-     gap:20px;
-     flex-direction: column;
-     justify-content: center;
- }
-     .footer-links:nth-child(1) {
-     width: 129px;
- }
-     .footer-links:nth-child(4) {
-         width: 119px;
-     }
-#footer-link-category, #footer-link-about-me, #footer-link-get-in-touch, #footer-link-follow-us{
-    margin-bottom:5px;
-    color: #2B2C34;
-    font-size: 20px;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-.footer-links-list .footer-link{
-    color: #2B2C34;
-    font-size: 18px;
-    font-weight: 400;
-}
-hr{
-    width: 1250px;
-    height: 1px;
-    background: #C0C0C0;
-    margin-bottom:26px;
-}
-.footer-bottom-p{
-    justify-self: flex-start;
-    color:#2B2C34;
-    font-size: 14px;
-    font-weight: 400;
 }
