--- a/Dasteen-site/style.css
+++ b/Dasteen-site/style.css
@@ -375,7 +375,7 @@ footer{
     width: 805px;
     height: 100%;
     display: grid;
-    grid-template-columns:repeat(4, 1fr);
+    grid-template-columns:129px 113px 159px 119px;
     grid-gap: 95px;
 }
 .footer-links .footer-links-list{
@@ -383,12 +383,6 @@ footer{
     gap:20px;
     flex-direction: column;
     justify-content: center;
-}
-.footer-links:nth-child(1) {
-    width: 129px;
-}
-.footer-links:nth-child(4) {
-    width: 119px;
 }
 #footer-link-category, #footer-link-about-me, #footer-link-get-in-touch, #footer-link-follow-us{
     margin-bottom:5px;
