delete 1 class on div in subscribe section

--- a/Dasteen-site/style.css
+++ b/Dasteen-site/style.css
@@ -408,3 +408,4 @@ hr{
     font-size: 14px;
     font-weight: 400;
 }
+/*---------------------------------------------footer------------------------------*/
