--- a/Dasteen-site/style.css
+++ b/Dasteen-site/style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+.w-1440{
+    width: 1440px;
+    margin: 0 auto;
+    position:relative;
+}
 header {
-    width: 100%;
+    width: 1440px;
     height: 86px;
     background: #EFF0F3;
     box-shadow: 4px 6px 13px 0px rgba(215, 215, 215, 0.25);
@@ -13,7 +18,6 @@ header {
 }
 .w-1250{
     width: 1250px;
-    margin: 0 auto;
     display:flex;
     justify-content: space-between;
     align-items: center;
